src/test/ui/rfc-2632-const-trait-impl/super-traits-fail.stderr
error[E0277]: the trait bound `S: Foo` is not satisfied
  --> $DIR/super-traits-fail.rs:16:12
   |
LL | impl const Bar for S {}
   |            ^^^ the trait `Foo` is not implemented for `S`
   |
   = help: the trait `Foo` is implemented for `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
